# OpenFaceIOS

FaceAR_SDK_IOS_OpenFace_RunFull.xcodeproj/: project.pbxproj
FaceAR_SDK_IOS_OpenFace_RunFull/lib/FaceARDetect/: FaceARDetectIOS.h  FaceARDetectIOS.mm
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/DlibOptimize/dlib/image_processing/: frontal_face_detector.h
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/DlibOptimize/dlib/threads/: threads_kernel_shared.h
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/FaceAnalyser/include/: FaceAnalyser.h  Face_utils.h
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  Face_utils.cpp
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/LandmarkDetector/include/: LandmarkDetectorUtils.h  PDM.h
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/LandmarkDetector/src/: LandmarkDetectorUtils.cpp  PDM.cpp
FaceAR_SDK_IOS_OpenFace_RunFull/lib/local/dlib_release/dlib/threads/: threads_kernel_shared.h
linux/: CMakeLists.txt
linux/test/: test.cpp
